Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-137056

Qt Application Manager - WindowObject Resizing Issue (Qt 6.8.3+)

XMLWordPrintable

    • Linux/Wayland
    • e02cfbaac (dev), c61074b10 (6.10), 207de29a6 (6.9), 9bb5b4556 (tqtc/lts-6.8)
    • Appman & IF May 2025

      We've identified a regression in the automatic resizing of WindowObject instances within our Qt Application Manager-based application with Qt 6.8.3+. This issue also persists in Qt 6.9.

      Observed Behavior:

      • WindowObject instances do not automatically resize to available space.
      • The WindowItem.objectFollowsItemSize property appears to be ignored; even setting it to true explicitly has no effect.

      Expected Behavior (as in Qt 6.8.1 and earlier):

      • WindowObject instances automatically resize to available space.
      • The WindowItem.objectFollowsItemSize property functions as expected, when it is set to true (e.g., setting it to false in Qt 6.8.1 reproduces the issue seen in newer versions).

      Workaround:

      Currently, we are explicitly calling WindowObject.resize() to trigger the resize.

        For Gerrit Dashboard: QTBUG-137056
        # Subject Branch Project Status CR V

            rgriebl Robert Griebl
            tprks Sibel Toprak
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes